--- a/styles.css
+++ b/styles.css
@@ -80,6 +80,10 @@ h1.groove {
         table, th, td {
           border: 3px solid red;
         }
-
+.thick-gold-border{
+  border-color: gold;
+    border-width: 10px;
+    border-style: solid;
+}
 
         
