--- a/css/styles.css
+++ b/css/styles.css
@@ -65,6 +65,7 @@ h1.groove {
           width: 40%;
           color: whitesmoke;
           font-size: large;
+          padding-top: 50px;
         
           
         }
@@ -72,6 +73,7 @@ h1.groove {
     float: left;
           width: 40%;
           color: whitesmoke;
+          padding-top: 50px;
           padding-bottom: 150px;
           font-size: large;
         
