--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ body {
   h1 {
       font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
       margin: 5%;
-      font-size: 200px;
+      font-size: xx-large;
   }
   p.groove {border-style: groove;}
 
